@@ -11,21 +11,8 @@
 		-- build a list of supported target platforms that also includes a generic build
 		local platforms = premake.filterplatforms(prj.solution, cc.platforms, "Native")
 		
-		-- write a quick header
-		_p('# %s project makefile autogenerated by Premake', premake.actions[_ACTION].shortname)
+		premake.gmake_cpp_header(prj, cc, platforms)
 
-		-- set up the environment
-		_p('ifndef config')
-		_p('  config=%s', _MAKE.esc(premake.getconfigname(prj.configurations[1], platforms[1], true)))
-		_p('endif')
-		_p('')
-		
-		_p('ifndef verbose')
-		_p('  SILENT = @')
-		_p('endif')
-		_p('')
-
-		-- list the configurations
 		for _, platform in ipairs(platforms) do
 			for cfg in premake.eachconfig(prj, platform) do
 				premake.gmake_cpp_config(cfg, cc)
@@ -147,6 +134,42 @@
 	end
 
 
+
+--
+-- Write the makefile header
+--
+
+	function premake.gmake_cpp_header(prj, cc, platforms)
+		_p('# %s project makefile autogenerated by Premake', premake.actions[_ACTION].shortname)
+
+		-- set up the environment
+		_p('ifndef config')
+		_p('  config=%s', _MAKE.esc(premake.getconfigname(prj.solution.configurations[1], platforms[1], true)))
+		_p('endif')
+		_p('')
+		
+		_p('ifndef verbose')
+		_p('  SILENT = @')
+		_p('endif')
+		_p('')
+		
+		_p('ifndef CC')
+		_p('  CC = %s', cc.cc)
+		_p('endif')
+		_p('')
+		
+		_p('ifndef CXX')
+		_p('  CXX = %s', cc.cxx)
+		_p('endif')
+		_p('')
+		
+		_p('ifndef AR')
+		_p('  AR = %s', cc.ar)
+		_p('endif')
+		_p('')
+	end
+	
+	
 --
 -- Write a block of configuration settings.
 --
@@ -154,7 +177,20 @@
 	function premake.gmake_cpp_config(cfg, cc)
 
 		_p('ifeq ($(config),%s)', _MAKE.esc(cfg.shortname))
-		_p('  TARGETDIR  = %s', _MAKE.esc(cfg.buildtarget.directory))
+		
+		-- if this platform requires a special compiler or linker, list it now
+		local platform = cc.platforms[cfg.platform]
+		if platform.cc then
+			_p('  CC         = %s', platform.cc)
+		end
+		if platform.cxx then
+			_p('  CXX        = %s', platform.cxx)
+		end
+		if platform.ar then
+			_p('  AR         = %s', platform.ar)
+		end
+		
+		_p('  TARGETDIR  = %s', _MAKE.esc(cfg.buildtarget.directory))		
 		_p('  TARGET     = $(TARGETDIR)/%s', _MAKE.esc(cfg.buildtarget.name))
 		_p('  OBJDIR     = %s', _MAKE.esc(cfg.objectsdir))
 		_p('  DEFINES   += %s', table.concat(cc.getdefines(cfg.defines), " "))
@@ -167,7 +203,7 @@
 		_p('  LDDEPS    += %s', table.concat(_MAKE.esc(premake.getlinks(cfg, "siblings", "fullpath")), " "))
 		
 		if cfg.kind == "StaticLib" then
-			_p('  LINKCMD    = ar -rcs $(TARGET) $(OBJECTS)')
+			_p('  LINKCMD    = $(AR) -rcs $(TARGET) $(OBJECTS)')
 		else
 			_p('  LINKCMD    = $(%s) -o $(TARGET) $(OBJECTS) $(LDFLAGS) $(RESOURCES) $(ARCH)', iif(cfg.language == "C", "CC", "CXX"))
 		end
