@@ -14,7 +14,7 @@
 	function T.gmake_cpp.setup()
 		sln = solution "MySolution"
 		configurations { "Debug", "Release" }
-		platforms { "native", "x64" }
+		platforms { "native" }
 		
 		prj = project "MyProject"
 		language "C++"
@@ -30,6 +30,43 @@
 	end
 	
 
+
+--
+-- Test the header
+--
+
+	function T.gmake_cpp.BasicHeader()
+		prepare()
+		premake.gmake_cpp_header(prj, premake.gcc, sln.platforms)
+		test.capture [[
+# GNU Make project makefile autogenerated by Premake
+ifndef config
+  config=debug
+endif
+
+ifndef verbose
+  SILENT = @
+endif
+
+ifndef CC
+  CC = gcc
+endif
+
+ifndef CXX
+  CXX = g++
+endif
+
+ifndef AR
+  AR = ar
+endif
+		]]
+	end
+	
+	
+	
+--
+-- Test configuration blocks
+--
 
 	function T.gmake_cpp.BasicCfgBlock()
 		prepare()
@@ -58,10 +95,44 @@ ifeq ($(config),debug)
 endif
 		]]
 	end
+	
+
+	function T.gmake_cpp.BasicCfgBlockWithPlatformCc()
+		platforms { "ps3" }
+		prepare()
+		local cfg = premake.getconfig(prj, "Debug", "PS3")
+		premake.gmake_cpp_config(cfg, premake.gcc)
+		test.capture [[
+ifeq ($(config),debugps3)
+  CC         = ppu-lv2-g++
+  CXX        = ppu-lv2-g++
+  AR         = ppu-lv2-ar
+  TARGETDIR  = .
+  TARGET     = $(TARGETDIR)/MyProject
+  OBJDIR     = obj/PS3/Debug
+  DEFINES   += 
+  INCLUDES  += 
+  CPPFLAGS  += -MMD $(DEFINES) $(INCLUDES)
+  CFLAGS    += $(CPPFLAGS) $(ARCH) 
+  CXXFLAGS  += $(CFLAGS) 
+  LDFLAGS   += -s
+  RESFLAGS  += $(DEFINES) $(INCLUDES) 
+  LDDEPS    += 
+  LINKCMD    = $(CXX) -o $(TARGET) $(OBJECTS) $(LDFLAGS) $(RESOURCES) $(ARCH)
+  define PREBUILDCMDS
+  endef
+  define PRELINKCMDS
+  endef
+  define POSTBUILDCMDS
+  endef
+endif
+		]]
+	end
 
 
 
 	function T.gmake_cpp.PlatformSpecificBlock()
+		platforms { "x64" }
 		prepare()
 		local cfg = premake.getconfig(prj, "Debug", "x64")
 		premake.gmake_cpp_config(cfg, premake.gcc)
